View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032484 | Community | OCCT:Configuration | public | 2021-07-19 10:14 | 2022-10-19 15:55 |
Reporter | Vico Liang | Assigned To | vpozdyayev | ||
Priority | normal | Severity | block | ||
Status | verified | Resolution | fixed | ||
Product Version | 7.6.0 | ||||
Target Version | 7.6.1 | ||||
Summary | 0032484: Configuration, CMake fails to find EGL and GLES2 include directory on iOS platform | ||||
Description | Try to build on ios platform with master, below message occurs: CMake Error at CMakeLists.txt:787 (message): Could not find headers of used third-party products: 3RDPARTY_EGL_INCLUDE_DIR 3RDPARTY_GLES2_INCLUDE_DIR | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | N/A | ||||
|
Branch CR32484 has been created by kgv. SHA-1: 94f6811971bc5e21dc45c7db8e669ea7b9da4499 Detailed log of new commits: Author: kgv Date: Tue Dec 14 00:25:36 2021 +0300 0032484: Configuration, CMake fails to find EGL and GLES2 include directory on iOS platform Fixed configuration errors and compilation errors on iOS target due to unexpected EGL usage (non-existing on iOS). |
|
Branch CR32484_760 has been created by kgv. SHA-1: c70fac77fe693eed6e36535fb3e76c26cbedc25d Detailed log of new commits: Author: kgv Date: Tue Dec 14 00:25:36 2021 +0300 0032484: Configuration, CMake fails to find EGL and GLES2 include directory on iOS platform Fixed configuration errors and compilation errors on iOS target due to unexpected EGL usage (non-existing on iOS). |
|
Dear bugmaster, please remove workarounds from Jenkins scripts and check building of iOS sample - OCCT: branch CR32484. http://jenkins-test-12.nnov.opencascade.com/view/CR32484-master-KGV/ |
|
Branch CR32484-760 has been created by inv. SHA-1: 5d7120c29034d154a32e196bf9901b7bdca40b1e Detailed log of new commits: Author: kgv Date: Tue Dec 14 00:25:36 2021 +0300 0032484: Configuration, CMake fails to find EGL and GLES2 include directory on iOS platform Fixed configuration errors and compilation errors on iOS target due to unexpected EGL usage (non-existing on iOS). |
|
Combination - OCCT branch : IR-2021-12-17 master SHA - 302ad26bffd1ef35a61b8b25b79b9376d9a3e906 49e51745631c52b6c452c65adae4d6dfa21a1b1e Products branch : IR-2021-12-17 SHA - 98edda224f5e3516cba5be029bc70c3df45ca649 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18206.60000000041 / 18222.99000000043 [-0.09%] Products Total CPU difference: 11646.460000000101 / 11645.100000000084 [+0.01%] Windows-64-VC14: OCCT Total CPU difference: 20012.890625 / 20000.0 [+0.06%] Products Total CPU difference: 13093.890625 / 13044.453125 [+0.38%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32484 has been deleted by mnt. SHA-1: 94f6811971bc5e21dc45c7db8e669ea7b9da4499 |
|
Branch CR32484-760 has been deleted by mnt. SHA-1: 5d7120c29034d154a32e196bf9901b7bdca40b1e |
|
Branch CR32484_760 has been deleted by mnt. SHA-1: c70fac77fe693eed6e36535fb3e76c26cbedc25d |
occt: master 2f195ab9 2021-12-14 00:25:36 Committer: smoskvin Details Diff |
0032484: Configuration, CMake fails to find EGL and GLES2 include directory on iOS platform Fixed configuration errors and compilation errors on iOS target due to unexpected EGL usage (non-existing on iOS). |
Affected Issues 0032484 |
|
mod - CMakeLists.txt | Diff File | ||
mod - src/OpenGl/OpenGl_GlFunctions.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_GraphicDriver.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-07-19 10:14 | Vico Liang | New Issue | |
2021-07-19 10:14 | Vico Liang | Assigned To | => bugmaster |
2021-07-19 10:16 | Vico Liang | Summary | Cmake fails to find EGL and GLES2 include directory => Cmake fails to find EGL and GLES2 include directory on IOS platform |
2021-07-19 10:16 | Vico Liang | Description Updated | |
2021-07-19 10:25 | kgv | Summary | Cmake fails to find EGL and GLES2 include directory on IOS platform => Configuration, CMake fails to find EGL and GLES2 include directory on iOS platform |
2021-07-19 10:25 | kgv | Product Version | => 7.6.0 |
2021-10-29 17:07 | bugmaster | Target Version | 7.6.0 => 7.7.0 |
2021-12-14 00:51 | git | Note Added: 0105965 | |
2021-12-14 00:56 | kgv | Relationship added | child of 0032206 |
2021-12-14 00:56 | kgv | Test case number | => N/A |
2021-12-14 00:56 | kgv | Target Version | 7.7.0 => 7.6.1 |
2021-12-14 00:56 | kgv | Steps to Reproduce Updated | |
2021-12-14 01:03 | git | Note Added: 0105966 | |
2021-12-14 09:07 | kgv | Note Added: 0105967 | |
2021-12-14 09:07 | kgv | Severity | minor => block |
2021-12-14 09:07 | kgv | Status | new => resolved |
2021-12-14 09:07 | kgv | Status | resolved => reviewed |
2021-12-14 10:38 | git | Note Added: 0105969 | |
2021-12-17 16:16 | kgv | Time allocated | 13.12.2021: 6 h. => set |
2021-12-18 15:23 | smoskvin | Status | reviewed => tested |
2021-12-18 15:23 | smoskvin | Note Added: 0106059 | |
2021-12-18 20:24 | smoskvin | Changeset attached | => occt master 2f195ab9 |
2021-12-18 20:24 | kgv | Assigned To | bugmaster => kgv |
2021-12-18 20:24 | kgv | Status | tested => verified |
2021-12-18 20:24 | kgv | Resolution | open => fixed |
2021-12-19 11:17 | git | Note Added: 0106081 | |
2021-12-19 11:17 | git | Note Added: 0106082 | |
2021-12-19 11:17 | git | Note Added: 0106083 | |
2022-10-19 15:55 | smoskvin | Assigned To | kgv => vpozdyayev |