0032484: Configuration, CMake fails to find EGL and GLES2 include directory on iOS platform

Fixed configuration errors and compilation errors on iOS target due to unexpected EGL usage (non-existing on iOS).